--- a/.gitignore
+++ b/.gitignore
@@ -100,7 +100,7 @@ lms/static/certificates/css/
 cms/static/css/
 common/static/common/js/vendor/
 common/static/common/css/vendor/
-#common/static/bundles
+common/static/bundles
 webpack-stats.json
 
 ### Styling generated from templates
