refactor: 강좌개요 에디터 작업중

--- a/common/lib/xmodule/xmodule/templates/about/overview.yaml
+++ b/common/lib/xmodule/xmodule/templates/about/overview.yaml
@@ -3,51 +3,247 @@ metadata:
     display_name: overview
 
 data: |
+    <div id="course-info">
     <section class="about">
-      <h2>About This Course</h2>
-      <p>Include your long course description here. The long course description should contain 150-400 words.</p>
-
-      <p>This is paragraph 2 of the long course description. Add more paragraphs as needed. Make sure to enclose them in paragraph tags.</p>
+      <h2><i class="fa fa-university"></i>강좌 소개</h2>
+      <article>
+        <h3><i class="fa fa-pencil-square-o"></i>수업내용/목표</h3>
+        <div class="article_contents goal">
+        이 강좌의 수업내용/목표 에 대한 내용이 표시됩니다.
+        </div>
+      </article>
+      <article>
+        <h3><i class="fa fa-video-camera"></i>홍보/예시 영상</h3>
+        <div class="article_contents">
+          <div class="youtubewrap">
+            <video class="video" title="홍보/예시 영상" width="100%" height="100%" controls controlsList="nodownload">
+              <source src="http://vod.kmoocs.kr/vod/2017/09/29/512eedf0-e5c5-4c88-977b-be74c2fc1f4e.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+      </article>
     </section>
-
-    <section class="prerequisites">
-      <h2>Requirements</h2>
-      <p>Add information about the skills and knowledge students need to take this course.</p>
+    <section class="course-plan">
+      <h2><i class="fa fa-calendar"></i>강좌 운영 계획</h2>
+      <article class="syllabus">
+        <div class="article_contents">
+          <input type="checkbox" name="toggle" id="toggle"/>
+          <label for="toggle"></label>
+          <div class="syllabus_table">
+            <table summary="강좌 전체에 대한 주차별 차시별 내용 및 과제를 요약해서 보여주는 강의계획서" border="1" cellspacing="0" cellpadding="0">
+              <caption>강의계획서</caption>
+              <colgroup>
+                <col width="5%"/>
+                <col width="30%"/>
+                <col width=""/>
+                <col width="15%"/>
+              </colgroup>
+              <thead>
+                <tr>
+                  <th>
+                    주차
+                  </th>
+                  <th>
+                    주차명
+                  </th>
+                  <th>
+                    차시명
+                  </th>
+                  <th>
+                    과제
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td rowspan="2" class="cts">
+                    1
+                  </td>
+                  <td rowspan="2">
+                    주차1
+                  </td>
+                  <td>
+                    차시1
+                  </td>
+                  <td class="cts">
+                    퀴즈1
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    차시2
+                  </td>
+                  <td class="cts">
+                    토론
+                  </td>
+                </tr>
+                <tr>
+                  <td class="cts">
+                    2
+                  </td>
+                  <td>
+                    주차2
+                  </td>
+                  <td>
+                    차시1
+                  </td>
+                  <td class="cts">
+                    토론
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="4" class="bgcolor cts">
+                    중간시험
+                  </td>
+                </tr>
+                <tr>
+                  <td class="cts">
+                    3
+                  </td>
+                  <td>
+                    주차3
+                  </td>
+                  <td>
+                    차시1
+                  </td>
+                  <td class="cts">
+                    상호평가
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="4" class="cts bgcolor">
+                    기말시험
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </article>
     </section>
-
     <section class="course-staff">
-      <h2>Course Staff</h2>
-      <article class="teacher">
-        <div class="teacher-image">
-          <img src="/static/images/placeholder-faculty.png" align="left" style="margin:0 20 px 0" alt="Course Staff Image #1">
+        <h2><i class="fa fa-group (alias)"></i>강좌운영팀 소개</h2>
+        <article>
+            <h3><i class="fa fa-user"></i>교수자</h3>
+            <article class="professor">
+                <div class="teacher_image">
+                    <img src="http://www.kmooc.kr/static/images/placeholder-faculty.png" align="left" alt="">
+                </div>
+                <div class="staff_descript">
+                    <dl>
+                        <dt>
+                         <i class="fa fa-angle-double-right"></i><i class="staff-name"></i> 교수
+                      </dt>
+                        <dd>현) 한국대학교 전산학과 교수</dd>
+                        <dd>전) S기업 연구원</dd>
+                        <dd>한국대학교. 컴퓨터공학 박사</dd>
+                        <dd>E-mail: abc@example.com</dd>
+                    </dl>
+                </div>
+            </article>
+        </article>
+        <article>
+            <h3><i class="fa fa-user"></i>강좌지원팀</h3>
+            <article class="staff">
+                <div class="ta_image">
+                    <img src="http://www.kmooc.kr/static/images/placeholder-faculty.png" align="left" alt="">
+                </div>
+                <div class="staff_descript">
+                    <dl>
+                        <dt>
+                         <i class="fa fa-angle-double-right"></i><i class="staff-name">조교</i>
+                      </dt>
+                        <dd>한국대학교 전산학 박사과정</dd>
+                        <dd>E-mail: abc@example.com</dd>
+                    </dl>
+                </div>
+            </article>
+        </article>
+    </section>
+    <section class="info">
+      <h2><i class="fa fa-info-circle"></i>강좌 수강 정보</h2>
+      <article>
+        <h3>
+          <i class="fa fa-graduation-cap"></i>이수/평가정보
+        </h3>
+        <div class="grade_table">
+          <table style="width: 100%;" border="1" summary="이수/평가정보" cellspacing="0" cellpadding="0">
+            <caption>이수/평가정보</caption>
+            <colgroup>
+              <col width="20%">
+              <col width="20%">
+              <col width="20%">
+              <col width="20%">
+              <col width="20%">
+              <col width="20%">
+            </colgroup>
+            <thead>
+              <tr>
+                <th>
+                  과제명
+                </th>
+                <th>
+                  퀴즈
+                </th>
+                <th>
+                  토론
+                </th>
+                <th>
+                  중간고사
+                </th>
+                <th>
+                  기말고사
+                </th>
+              </tr>
+            </thead>
+            <tbody style="text-align: center;">
+              <tr>
+                <td style="font-weight: bold;">
+                  반영비율
+                </td>
+                <td>
+                  %
+                </td>
+                <td>
+                  %
+                </td>
+                <td>
+                  %
+                </td>
+                <td>
+                  %
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <b>※&nbsp;총 60% 이상 점수 획득 시, 이수증을 발급받을 수 있습니다.</b>
         </div>
-
-        <h3>Staff Member #1</h3>
-        <p>Biography of instructor/staff member #1</p>
       </article>
-
-      <article class="teacher">
-        <div class="teacher-image">
-          <img src="/static/images/placeholder-faculty.png" align="left" style="margin:0 20 px 0" alt="Course Staff Image #2">
-        </div>
-
-        <h3>Staff Member #2</h3>
-        <p>Biography of instructor/staff member #2</p>
+      <article>
+        <h3><i class="fa fa-sort-amount-desc"></i>강좌 수준 및 선수요건</h3>
+        <p id="course-level">이 강좌는 유익한 내용이 다수 포함되어 있습니다.</p>
+      </article>
+      <article>
+        <h3><i class="fa fa-book"></i>교재 및 참고문헌</h3>
+        <p id="course-reference">이 강좌는 여러가지 참고자료가 많이 있습니다.</p>
       </article>
     </section>
-
     <section class="faq">
-      <section class="responses">
-        <h2>Frequently Asked Questions</h2>
-        <article class="response">
-          <h3>What web browser should I use?</h3>
-          <p>The Open edX platform works best with current versions of Chrome, Edge, Firefox, Internet Explorer, or Safari.</p>
-          <p>See our <a href="http://edx.readthedocs.org/projects/open-edx-learner-guide/en/latest/front_matter/browsers.html">list of supported browsers</a> for the most up-to-date information.</p>
+        <h2><i class="fa fa-question-circle"></i>자주 묻는 질문</h2>
+        <article class="question">
+            <h4><i class='fa fa-chevron-right'></i>강좌 교재가 따로 있나요?</h4>
+            <p>네. 있습니다.</p>
         </article>
-
-        <article class="response">
-          <h3>Question #2</h3>
-          <p>Your answer would be displayed here.</p>
+        <article class="question">
+            <h4><i class='fa fa-chevron-right'></i>강좌 교재가 따로 있나요?</h4>
+            <p>네. 있습니다.</p>
         </article>
-      </section>
     </section>
+    <section class="user_add">
+    <h2><i class="fa fa-plus-circle"></i>제목</h2>
+    <article class="question">
+        <h3><i class='fa fa-chevron-right'></i>소제목</h3>
+        <p>내용</p>
+    </article><br>
+    </section>
+    </div>
